# randomizer-engine

./: .gitignore  .mergify.yml  README.md  dune-project  example.logic  flake.nix  opam-selection.nix  randomizer-engine.opam  randomizer-engine.opam.template  shell.nix
.circleci/: config.yml
.github/workflows/: ci.yaml
nix/: sources.json
src/: Main.ml  datalog.ml  dune  dune-project  effects.ml  formula.ml  grammar.ml  lexer.ml  main.ml  modelotron.ml  multiplicity.ml  parser.mly  phases.ml  provable.ml  randomizer-engine.install  sat.ml  types.ml  zdd.ml
src/effects/: dune  yield.ml  yield.mli
